1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Note App{Config,Data} features.

	* VERSION: Bump.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acconfig.h: Add CONFPATH.

	* configure.in: Assign $withval instead of $withval/include to
	$tkincludedir.  Thanks to Kim Shrier.
	(swarm_libdir): Append "/swarm" to sysconfdir if it's the default.
	Define CONFPATH to sysconf in swarmconfig.h.

1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Note addition of --show-current-time, and removal of
	step button.

1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (SWARM_INSTALL): Substitute.
	(install-data-local): Create $(bindir) and install install-sh if
	needed.

	* configure.in: Call md_SWARM_INSTALLER after AM_INIT_AUTOMAKE.

	* VERSION: Bump.

1998-08-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Note move of Makefile.appl and Makefile.lib.

	* VERSION: Bump.

1998-08-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VERSION: Bump.

	* NEWS: Note addition of tclobjc.  Note tclobjc and message probe
	libffi bug workarounds.

1998-08-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VERSION: Bump.

	* acconfig.h: Add BUGGY_BUILTIN_APPLY.

	* configure.in: Call md_CHECK_BUILTIN_APPLY.

1998-08-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in (swarm_prefix): New subsituted variable, a copy of
	prefix (for the purpose of included Makefile in applications).
	(swarm_exec_prefix, swarm_libdir): New variables derived from
	exec_prefix and libdir.

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Makefile.appl.in, Makefile.lib.in: Moved to etc. 

	* configure.in: In the case prefix=/usr, append "swarm" to libdir,
	and includedir.  Extract Makefile.appl and Makefile.lib
	to etc.

	* VERSION: Bump.

	* Makefile.am (install-data-local): Don't install Makefile.appl and
	Makefile.lib.
	(install-data-local): Install swarmconfig.h instead of config.h.
