@@ -6,6 +6,6 @@ SWARM_INSTALL = @SWARM_INSTALL@
 
 install-data-local:
 	$(INSTALL_DATA) swarmconfig.h $(includedir)
-	$(mkinstalldirs) $(bindir)
+	$(mkinstalldirs) $(bindir) $(datadir)/swarm
 	if test $(SWARM_INSTALL) = install-sh; then $(INSTALL_PROGRAM) $(srcdir)/install-sh $(bindir); fi
 
