@@ -4,4 +4,5 @@
 #undef POINTER_FMT_HEX_PREFIX
 #undef BUGGY_BUILTIN_APPLY
 #undef HAVE_OBJC_MALLOC
-#undef CONFPATH
+#undef DATADIR
+#undef SYSCONFDIR
