@@ -168,8 +168,8 @@ AC_SUBST(swarm_prefix)
 AC_SUBST(swarm_exec_prefix)
 AC_SUBST(swarm_libdir)
 
-test $sysconfdir = '${prefix}/etc' && sysconfdir=${sysconfdir}/swarm
-AC_DEFINE_UNQUOTED(CONFPATH,"`eval echo $sysconfdir`")
+AC_DEFINE_UNQUOTED(DATADIR,"`eval echo $datadir/swarm/`")
+AC_DEFINE_UNQUOTED(SYSCONFDIR,"`eval echo $sysconfdir/swarm/`")
 
 
 AC_OUTPUT([Makefile m4/Makefile src/Makefile src/activity/Makefile src/analysis/Makefile src/collections/Makefile src/defobj/Makefile src/gui/Makefile src/misc/Makefile src/objectbase/Makefile src/random/Makefile src/simtools/Makefile src/simtoolsgui/Makefile src/space/Makefile src/tclobjc/Makefile src/tkobjc/Makefile src/tkobjc/tk/Makefile etc/config.swarm etc/Makefile.appl etc/Makefile.lib etc/Makefile
